--- a/docs/大学物理/热学/热学.md
+++ b/docs/大学物理/热学/热学.md
@@ -1,3 +1,5 @@
 # 正在施工中......
 
-<object data="大物真经—热学.pdf" type="application/pdf" width="100%" height="800">    <embed src="大物真经—热学.pdf" type="application/pdf" /> </object>
+<object data="大物真经—热学.pdf" type="application/pdf" width="100%" height="800">
+      <embed src="大物真经—热学.pdf" type="application/pdf" /> 
+</object>
